# Stonks-Flask-Based-Stock-Watchlist-Application

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  package-lock.json  package.json  pyproject.toml  run.py  tailwind.config.js
app/: __init__.py  config.py  extension.py  forms.py  models.py  old routes.py  routes.py  views.py
app/blueprints/auth/: routes.py  utils.py
app/blueprints/main/: routes.py
app/blueprints/stock_detail/: routes.py
app/blueprints/watchlist/: finnhub_utils.py  routes.py
app/static/css/: output.css
app/static/js/: main.js  swiper.js
app/templates/: base.html  homepage.html  stock_details.html  watchlist.html
app/templates/auth/: account_deleted.html  delete_account.html  forgot_password.html  forgot_password_sent.html  login.html  profile.html  reset_password.html  reset_password_failed.html  reset_password_success.html  signup.html  verify_otp.html
app/utils/: alpha_vintage.py  chart_utils.py  email.py  finnhub_utils.py  stock_chart.py  stocks.py
migrations/versions/: 1d5c14149ce0_your_migration_message.py  2dab7384d15c_remove_unique_constraint_from_symbol_.py  412ba10f2f93_added_is_global_column_to_stock_model.py  44880c260770_user_id_modification.py  488ad08814f1_class_model_set_password_method_.py  743b8f56708f_added_reset_token_fields.py  84437c0b2fdd_otp_fix.py  8ea5af42a068_password_attribute_removed.py  b92b5ad494f0_otp_logic_correction.py  be97fad57d0a_add_composite_unique_constraint_on_.py  e901e901ebaf_email_notification_system_update.py
