[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["Arian Hadi <arianhadi2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "3.1.1"
jinja2 = "^3.1.5"
requests = "^2.32.3"
flask-wtf = "^1.2.2"
python-dotenv = "^1.0.1"
flask-login = "^0.6.3"
flask-migrate = "^4.1.0"
psycopg2 = "^2.9.10"
flask-bcrypt = "^1.0.1"
email-validator = "^2.2.0"
finnhub-python = "^2.4.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
